--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 .DS_Store
 /Config
 /__pycache__
+Database/desktop.ini
+Discretization/desktop.ini
+Instances/desktop.ini
+MachineLearning/desktop.ini
+Metaheuristics/desktop.ini
+Metrics/desktop.ini
+Problem/desktop.ini
+/desktop.ini
